@@ -126,7 +126,7 @@ public class IdMAnyDirectoryPanelAdditionalActionLinksProvider
             }
         }, ActionLink.ActionType.MANAGE_RESOURCES);
         manageResources.setEntitlements(
-                String.format("%s,%s", IdRepoEntitlement.USER_READ, IdRepoEntitlement.USER_UPDATE));
+                "%s,%s".formatted(IdRepoEntitlement.USER_READ, IdRepoEntitlement.USER_UPDATE));
         manageResources.setOnConfirm(false);
         manageResources.setRealms(realm, model.getObject().getDynRealms());
         actions.add(manageResources);
@@ -146,7 +146,7 @@ public class IdMAnyDirectoryPanelAdditionalActionLinksProvider
                 modal.show(true);
             }
         }, ActionLink.ActionType.MANAGE_ACCOUNTS);
-        manageAccounts.setEntitlements(String.format("%s,%s,%s",
+        manageAccounts.setEntitlements("%s,%s,%s".formatted(
                 IdRepoEntitlement.USER_READ, IdRepoEntitlement.USER_UPDATE, IdMEntitlement.RESOURCE_GET_CONNOBJECT));
         manageAccounts.setOnConfirm(false);
         manageAccounts.setRealms(realm, model.getObject().getDynRealms());
@@ -167,7 +167,7 @@ public class IdMAnyDirectoryPanelAdditionalActionLinksProvider
                 modal.show(true);
             }
         }, ActionLink.ActionType.MERGE_ACCOUNTS);
-        mergeAccounts.setEntitlements(String.format("%s,%s,%s,%s",
+        mergeAccounts.setEntitlements("%s,%s,%s,%s".formatted(
                 IdRepoEntitlement.USER_READ, IdRepoEntitlement.USER_UPDATE, IdRepoEntitlement.USER_DELETE,
                 IdMEntitlement.RESOURCE_GET_CONNOBJECT));
         actions.add(mergeAccounts);
@@ -207,7 +207,7 @@ public class IdMAnyDirectoryPanelAdditionalActionLinksProvider
             }
         }, ActionLink.ActionType.MANAGE_RESOURCES);
         manageResources.setEntitlements(
-                String.format("%s,%s", IdRepoEntitlement.GROUP_READ, IdRepoEntitlement.GROUP_UPDATE));
+                "%s,%s".formatted(IdRepoEntitlement.GROUP_READ, IdRepoEntitlement.GROUP_UPDATE));
         manageResources.setOnConfirm(false);
         manageResources.setRealms(realm, modelObject.getDynRealms());
         actions.add(manageResources);
@@ -249,7 +249,7 @@ public class IdMAnyDirectoryPanelAdditionalActionLinksProvider
             }
         }, ActionLink.ActionType.MANAGE_RESOURCES);
         manageResources.setEntitlements(
-                String.format("%s,%s", AnyEntitlement.READ.getFor(type), AnyEntitlement.UPDATE.getFor(type)));
+                "%s,%s".formatted(AnyEntitlement.READ.getFor(type), AnyEntitlement.UPDATE.getFor(type)));
         manageResources.setRealms(realm, modelObject.getDynRealms());
         actions.add(manageResources);
         return actions;
