@@ -23,7 +23,6 @@ import java.io.Serializable;
 import java.text.MessageFormat;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import org.apache.syncope.client.console.SyncopeConsoleSession;
@@ -124,14 +123,14 @@ public class ConnidLocations extends
                 modal.show(true);
             }
 
-        }, ActionLink.ActionType.CREATE, String.format("%s", IdMEntitlement.CONNECTOR_CREATE));
+        }, ActionLink.ActionType.CREATE, "%s".formatted(IdMEntitlement.CONNECTOR_CREATE));
 
         return panel;
     }
 
     @Override
     protected Collection<ActionLink.ActionType> getBatches() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     protected static class ConnidLocationsDataProvider extends DirectoryDataProvider<Serializable> {
