@@ -298,7 +298,7 @@ public class LinkedAccountModalPanel extends Panel implements ModalPanel {
                         new ActionLinksTogglePanel.ActionLinkToggleCloseEventPayload(target));
             }
         }, ActionLink.ActionType.RECONCILIATION_PUSH,
-                String.format("%s,%s", IdRepoEntitlement.USER_READ, IdRepoEntitlement.TASK_EXECUTE));
+                "%s,%s".formatted(IdRepoEntitlement.USER_READ, IdRepoEntitlement.TASK_EXECUTE));
 
         builder.addAction(new ActionLink<>() {
 
@@ -324,7 +324,7 @@ public class LinkedAccountModalPanel extends Panel implements ModalPanel {
                         new ActionLinksTogglePanel.ActionLinkToggleCloseEventPayload(target));
             }
         }, ActionLink.ActionType.RECONCILIATION_PULL,
-                String.format("%s,%s", IdRepoEntitlement.USER_READ, IdRepoEntitlement.TASK_EXECUTE));
+                "%s,%s".formatted(IdRepoEntitlement.USER_READ, IdRepoEntitlement.TASK_EXECUTE));
 
         if (!reconciliationOnly) {
             builder.addAction(new ActionLink<>() {
