@@ -296,7 +296,7 @@ public abstract class AbstractPullResultHandler
             AnyTO before = getAnyTO(match.getAny());
             if (before == null) {
                 result.setStatus(ProvisioningReport.Status.FAILURE);
-                result.setMessage(String.format("Any '%s(%s)' not found", provision.getAnyType(), match));
+                result.setMessage("Any '%s(%s)' not found".formatted(provision.getAnyType(), match));
             } else {
                 result.setName(getName(before));
             }
@@ -404,7 +404,7 @@ public abstract class AbstractPullResultHandler
 
             if (before == null) {
                 result.setStatus(ProvisioningReport.Status.FAILURE);
-                result.setMessage(String.format("Any '%s(%s)' not found", provision.getAnyType(), match));
+                result.setMessage("Any '%s(%s)' not found".formatted(provision.getAnyType(), match));
             }
 
             if (!profile.isDryRun()) {
@@ -524,7 +524,7 @@ public abstract class AbstractPullResultHandler
 
             if (before == null) {
                 result.setStatus(ProvisioningReport.Status.FAILURE);
-                result.setMessage(String.format("Any '%s(%s)' not found", provision.getAnyType(), match));
+                result.setMessage("Any '%s(%s)' not found".formatted(provision.getAnyType(), match));
             }
 
             if (!profile.isDryRun()) {
